MonetDB/src/mal/Tests/tst108.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## analyse the basic interpreter loop
#
#	i:=0;
#barrier	v:=1;
#	leave v;
#	i:= 1;
#barrier t:= i<3;
#end	v;
#	i:=i+1;
#	redo t;
#end	t;
#	i:= 0;
#
!ERROR: end-label 'v' doesnot match 't' in main[6]
!ERROR: end-label 't' doesnot match 'v' in main[9]
!ERROR: end-label 'v' doesnot match 't' in main[6]
function Admin.main():int;	#0:(main:int)
	i := 0;	#1:(i:int)<-($2:int)
barrier	v := 1;	#2:(v:int)<-($4:int)
	leave v;	#3:(v:int)
	i := 1;	#4:(i:int)<-($4:int)
barrier	t := calc.<(i,3);	#5:(t:bit)<-(i:int)($6:int)
end	v;	#6:(v:int)
	i := calc.+(i,1);	#7:(i:int)<-(i:int)($4:int)
	redo t ;	#8:(t:bit)
end	t;	#9:(t:bit)
	i := 0;	#10:(i:int)<-($2:int)
end function;	#11:
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors

>